# amia_tp_grupal

./: .gitignore  12.13.TensorizedChol y EfficientChol.py  14.conclusiones.md  AMIA_2025_TP1.ipynb  LICENSE  README.md  pyproject.toml
base/: bayesian.py  cholesky.py  qda.py
utils/: bench.py  datasets.py
